--- a/src/views/TimePeriodView.fxml
+++ b/src/views/TimePeriodView.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#mouseDragged" onMousePressed="#mousePressed" prefHeight="900.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TimePeriodController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" onMouseDragged="#mouseDragged" onMouseEntered="#refreshView" onMousePressed="#mousePressed" prefHeight="900.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TimePeriodController">
    <children>
       <Pane prefHeight="900.0" prefWidth="211.0" style="-fx-background-color: #E6BB9A;">
          <children>
@@ -174,7 +174,7 @@
                   <Image url="@../images/next_element_right.png" />
                </image>
             </ImageView>
-            <Pane fx:id="actionButton" layoutX="440.0" layoutY="102.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="42.0" prefWidth="221.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
+            <Pane fx:id="actionButton" layoutX="888.0" layoutY="102.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="42.0" prefWidth="221.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
                <children>
                   <ImageView fx:id="actionButtonImage" fitHeight="32.0" fitWidth="32.0" layoutX="14.0" layoutY="5.0">
                      <image>
