--- a/src/views/TimePeriodView.fxml
+++ b/src/views/TimePeriodView.fxml
@@ -264,12 +264,12 @@
             </Label>
             <Pane layoutX="617.0" layoutY="181.0" prefHeight="241.0" prefWidth="532.0">
                <children>
-                  <Label layoutX="37.0" layoutY="29.0" prefHeight="37.0" prefWidth="244.0" text="Minutes:" textFill="WHITE">
+                  <Label layoutX="37.0" layoutY="29.0" prefHeight="37.0" prefWidth="244.0" text="Time:" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="minutesField" layoutX="318.0" layoutY="25.0" prefHeight="45.0" prefWidth="173.0" promptText="e.g. 10" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+                  <TextField fx:id="hoursField" layoutX="290.0" layoutY="25.0" prefHeight="45.0" prefWidth="56.0" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
                      <font>
                         <Font name="Arial" size="16.0" />
                      </font>
@@ -279,7 +279,7 @@
                         <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="daysComboBox" layoutX="318.0" layoutY="83.0" prefHeight="45.0" prefWidth="173.0" promptText="Select Day:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
+                  <ComboBox fx:id="daysComboBox" layoutX="290.0" layoutY="83.0" prefHeight="45.0" prefWidth="201.0" promptText="Select Day:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
                   <Pane fx:id="addMinutesButton" layoutX="37.0" layoutY="141.0" onMouseClicked="#addMinutesButtonClicked" onMouseEntered="#addMinutesButtonHovered" onMouseExited="#addMinutesButtonExited" prefHeight="58.0" prefWidth="173.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
                      <children>
                         <Label fx:id="addMinutesButtonLabel" alignment="CENTER" layoutX="46.0" layoutY="8.0" prefHeight="42.0" prefWidth="113.0" style="-fx-wrap-text: true;" text="Add" textFill="#e6bb9a">
@@ -311,6 +311,21 @@
                   <Label fx:id="errorMessage" alignment="CENTER" layoutX="39.0" layoutY="199.0" prefHeight="37.0" prefWidth="455.0" style="-fx-wrap-text: true;" textFill="WHITE">
                      <font>
                         <Font name="Arial Rounded MT Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="352.0" layoutY="36.0" prefHeight="19.0" prefWidth="19.0" text="h" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="25.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="minutesField" layoutX="383.0" layoutY="25.0" prefHeight="45.0" prefWidth="56.0" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+                     <font>
+                        <Font name="Arial" size="16.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutX="446.0" layoutY="33.0" prefHeight="37.0" prefWidth="45.0" text="min" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="25.0" />
                      </font>
                   </Label>
                </children>
